--- a/ProjectSourceCode/src/views/layouts/main.hbs
+++ b/ProjectSourceCode/src/views/layouts/main.hbs
@@ -1,1 +1,10 @@
-{{!comment so the hbs file sticks}}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Register</title>
+</head>
+<body>
+  {{{body}}}
+</body>
+</html>
