--- a/ProjectSourceCode/src/views/partials/footer.hbs
+++ b/ProjectSourceCode/src/views/partials/footer.hbs
@@ -1,1 +1,9 @@
-{{!comment so the hbs file sticks}}
+<footer class="text-center text-muted w-100 mt-auto fixed-bottom">
+    <!-- TODO: Add the <script><script /> tag to include bootstrap javascript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    <p>
+        &copy; TinyNews - Jonathan Ro, Santiago Haces Febre, Sujay Basnet, Shivam Pathak
+    </p>
+</footer>
+</body>
+</html>
