--- a/ProjectSourceCode/src/views/layouts/main.hbs
+++ b/ProjectSourceCode/src/views/layouts/main.hbs
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Register</title>
-</head>
-<body>
-  {{{body}}}
-</body>
+  <head>
+    {{> header}}
+  </head>
+  <body>
+    {{> nav}}
+
+    <main>
+      {{{body}}}
+    </main>
+
+    {{> footer}}
+  </body>
 </html>
