--- a/ProjectSourceCode/src/views/pages/login.hbs
+++ b/ProjectSourceCode/src/views/pages/login.hbs
@@ -1,15 +1,18 @@
 <div style="max-width: 400px; margin: 50px auto; padding: 30px; background-color: #fdf2e9; border-radius: 10px; font-family: sans-serif;">
   <h2 style="text-align: center; color: #6b3e26;">Login</h2>
 
+
   <form action="/login" method="POST" style="display: flex; flex-direction: column; gap: 12px;">
     <input type="text" name="username" placeholder="Username" required>
     <input type="password" name="password" placeholder="Password" required>
     <button type="submit" style="background-color: #8b5e3c; color: white; padding: 10px; border: none; border-radius: 5px;">
       Login
     </button>
+    </div>
+        <div class="register-footer" style="text-align: center;">Don't have an account? <a href="/register">Register</a></div>
   </form>
+
 
   {{#if error}}
     <p style="color: red; text-align: center; margin-top: 10px;">{{error}}</p>
   {{/if}}
-</div>
