--- a/ProjectSourceCode/src/views/pages/register.hbs
+++ b/ProjectSourceCode/src/views/pages/register.hbs
@@ -5,11 +5,13 @@
     <input type="text" name="first_name" placeholder="First Name" required>
     <input type="text" name="last_name" placeholder="Last Name" required>
     <input type="email" name="email" placeholder="Email" required>
+    <input type="text" name="bio" placeholder="Bio">
     <input type="text" name="username" placeholder="Username" required>
     <input type="password" name="password" placeholder="Password" required>
     <button type="submit" style="background-color: #8b5e3c; color: white; padding: 10px; border: none; border-radius: 5px;">
       Register
     </button>
+      <div class="login-footer" style="text-align: center;">Already have an account? <a href="/login">Login</a></div>
   </form>
 
   {{#if error}}
