--- a/ProjectSourceCode/src/views/pages/home.hbs
+++ b/ProjectSourceCode/src/views/pages/home.hbs
@@ -9,6 +9,13 @@
       <h2 style="margin-bottom: 0.5rem;">{{this.title}}</h2>
       <p><em>{{this.date}}</em> • by {{this.author}}</p>
       <p>{{this.summary}}</p>
+      {{#if this.file_path}}
+        <p>
+          <a href="/{{this.file_path}}" target="_blank" style="color: #8b5e3c; text-decoration: none; font-weight: bold;">
+            📎 Download Article File
+          </a>
+        </p>
+      {{/if}}
     </div>
   {{/each}}
 
