--- a/ProjectSourceCode/src/views/pages/profile.hbs
+++ b/ProjectSourceCode/src/views/pages/profile.hbs
@@ -1,9 +1,9 @@
 <div style="max-width: 600px; margin: 50px auto; padding: 30px; background-color: #fdf2e9; border-radius: 10px; font-family: sans-serif;">
-  <h2 style="color: #6b3e26;">Welcome, {{user.first_name}} {{user.last_name}}!</h2>
+  <h2 style="color: #0f0f0f;">Welcome, {{user.first_name}} {{user.last_name}}!</h2>
   <div style="display: flex; justify-content: flex-end; margin-top: 1rem;">
     <a href="/new_article" 
        style="
-         background-color: #8b5e3c;
+         background-color: #0f0f0f;
          color: white;
          padding: 0.5rem 1rem;
          border-radius: 4px;
