--- a/ProjectSourceCode/src/views/layouts/main.hbs
+++ b/ProjectSourceCode/src/views/layouts/main.hbs
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    {{> header}}
+    <meta charset="UTF-8" />
+    <title>{{title}}</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/resources/css/style.css">
   </head>
-  <body>
-    {{> nav}}
-
-    <main>
+  <body class="d-flex flex-column h-100">
+    {{> header }}
+    {{> nav }}
+    <main class="container py-4 flex-grow-1">
       {{{body}}}
     </main>
-
-    {{> footer}}
+    {{> footer }}
   </body>
 </html>
+
+
