Updated readme and fixed edit article

--- a/ProjectSourceCode/src/views/pages/edit_article.hbs
+++ b/ProjectSourceCode/src/views/pages/edit_article.hbs
@@ -1,6 +1,6 @@
 {{!-- views/pages/edit_article.hbs --}}
-<div style="max-width: 600px; margin: 50px auto; padding: 30px; background-color: #0f0f0f; border-radius: 10px">
-  <h2 style="text-align: center; color: #0f0f0f;">Edit Article</h2>
+<div style="max-width: 600px; margin: 50px auto; padding: 30px; background-color: white; border-radius: 10px">
+  <h2 style="text-align: center; color: #e4e2e0;">Edit Article</h2>
   <form action="/edit_article/{{article.article_id}}" method="POST" enctype="multipart/form-data" style="display: flex; flex-direction: column; gap: 16px;">
     <div>
       <label for="title">Title</label>
