--- a/ProjectSourceCode/src/views/layouts/main.hbs
+++ b/ProjectSourceCode/src/views/layouts/main.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>{{title}}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/resources/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body class="d-flex flex-column h-100">
     {{> header }}
